Fixed problem with dates on Firefox. Fixed white background on hover on top-right menu bar. Added rules to main page. Added local database info for local testing.

--- a/assets/styles/custom.less
+++ b/assets/styles/custom.less
@@ -58,11 +58,20 @@ body {
 	li {
 		float: left;
 	    padding-top: 5px;
-	    padding-right: 25px;
+	    padding-right: 15px;
 	    a {
 	    	color: @gray;
 	    }
+	    a:hover {
+	    	color: #fff;
+    		background-color: transparent;
+	    }
 	}
+}
+
+.media-body ol li {
+	margin-top: 10px;
+	margin-bottom: 5px;
 }
 
 .form-signin input[type="text"],
